* Install Ruboto to ease Android setup.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,16 +12,13 @@ jdk:
 
 env:
   matrix:
-    - ANDROID_TARGET=16 JRUBY_JARS_VERSION=1.7.9
-    - ANDROID_TARGET=16 JRUBY_JARS_VERSION=1.7.4
-    - ANDROID_TARGET=10 JRUBY_JARS_VERSION=1.7.9
-    - ANDROID_TARGET=10 JRUBY_JARS_VERSION=1.7.4
-    - ANDROID_TARGET=15 JRUBY_JARS_VERSION=1.7.9
-    - ANDROID_TARGET=15 JRUBY_JARS_VERSION=1.7.4
-    - ANDROID_TARGET=17 JRUBY_JARS_VERSION=1.7.9
-    - ANDROID_TARGET=17 JRUBY_JARS_VERSION=1.7.4
+    - ANDROID_TARGET=16
+    - ANDROID_TARGET=10
+    - ANDROID_TARGET=15
+    - ANDROID_TARGET=17
 
 script:
+    - gem install ruboto
     - ruboto setup -y -t $ANDROID_TARGET
     - source ~/.rubotorc
     - ruboto emulator -t $ANDROID_TARGET
