--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,4 +13,5 @@
         <service android:exported='false' android:name='org.ruboto.RubotoService'/>
     </application>
     <uses-sdk android:minSdkVersion='10' android:targetSdkVersion='10'/>
+    <uses-permission android:name='android.permission.INTERNET'/>
 </manifest>
