--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?> 
 <manifest package='org.sqldroid.ruboto_test' android:versionCode='1' android:versionName='1.0' xmlns:android='http://schemas.android.com/apk/res/android'>
-    <application android:icon='@drawable/ic_launcher' android:label='@string/app_name'>
+    <application android:hardwareAccelerated='true' android:icon='@drawable/ic_launcher' android:label='@string/app_name' android:largeHeap='true'>
         <activity android:label='@string/app_name' android:name='RubotoTestActivity'>
             <intent-filter>
                 <action android:name='android.intent.action.MAIN'/>
@@ -12,6 +12,6 @@
         <activity android:exported='false' android:name='org.ruboto.RubotoDialog' android:theme='@android:style/Theme.Dialog'/>
         <service android:exported='false' android:name='org.ruboto.RubotoService'/>
     </application>
-    <uses-sdk android:minSdkVersion='10' android:targetSdkVersion='10'/>
+    <uses-sdk android:minSdkVersion='15' android:targetSdkVersion='15'/>
     <uses-permission android:name='android.permission.INTERNET'/>
 </manifest>
